<resources>
    <string name="app_name">BuddyFinder</string>
    <string name="ngo_member">NGO Member</string>
    <string name="ngo_supporter">NGO Supporter</string>
    <string name="login_as">"LOGIN AS: "</string>
    <string name="add_animals">ADD ANIMAL</string>
    <string name="show_animals">SHOW ANIMALS</string>
    <string name="add_donations">ADD DONATION</string>
    <string name="show_donations">SHOW DONATIONS</string>
    <string name="specie">SPECIE</string>
    <string name="entry_date">ENTRY DATE</string>
    <string name="age">AGE</string>
    <string name="characteristics">CHARACTERISTICS</string>
    <string name="life_phase">LIFE PHASE</string>
    <string name="add">ADD</string>
    <string name="take_pic">TAKE A PIC</string>
    <string name="status">STATUS</string>
    <string name="kind">KIND</string>
    <string name="quantity">QUANTITY</string>
    <string name="description">DESCRIPTION</string>
    <string name="close">CLOSE</string>
    <string name="logout">LOGOUT</string>
    <string name="amount">AMOUNT</string>
    <string name="donate">DONATE</string>
    <string name="name">NAME</string>
    <string name="phone">PHONE</string>
    <string name="login">LOGIN</string>
    <string name="adopt">ADOPT</string>
    <string name="people_interested">PEOPLE INTERESTED IN ADOPTING</string>
    <string name="approve">APPROVE</string>
    <string name="owner">OWNER</string>
</resources>
