<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AnimalDetailsActivity">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txtSp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/specie"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txtSpecie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/age"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txtAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtED"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/entry_date"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txtEntryDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtLP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/life_phase"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txtLifePhase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/characteristics"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txtCharacteristics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtSt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/status"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txtStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="18sp" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvAnimalGallery"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp" />

        </LinearLayout>

</ScrollView>